src/content/css/content.styl
/* Content styles
 * inside gmail
 */

@import 'nib';
@import '../../bower_components/font-awesome/css/font-awesome.css';

@import 'plugins/*';

div.qt-mirror {
    overflow: auto;
    position: absolute;
    z-index: -9999;
    margin: 0;

    white-space: pre-wrap;
    word-wrap: break-word;

    .qt-caret {
        display: inline-block;
    }
}

/* Autocomplete dropdown
*/

$colorActiveBg = #EEEEEE;
$colorText = #000;
$padding = 8px;

.qt-dropdown {
    display: none;
    width: 220px;

    position: absolute;
    z-index: 2147483646;

    overflow: hidden;
    margin: 0;
    padding: 0;
    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
    border-radius: 2px;
    border: 1px solid #c0c0c0;
    background: #fff;

    //font-family: 'sans-serif';
    font-size: 13px;
}

.qt-dropdown-show {
    display: block !important;
}

.qt-dropdown * {
    box-sizing: border-box;
}

.qt-dropdown-content {
    display: block;
    overflow-x: hidden;
    overflow-y: auto;
    max-height: 16em;
    margin: 0;
    padding: 0;
    list-style-type: none;

    .qt-item {
        position: relative;
        padding: $padding;
        overflow: hidden;
        cursor: pointer;

        color: $colorText;
        text-overflow: ellipsis;

        &.default {
            cursor: default;
            max-height: 4em;
        }

        &.active {
            background: $colorActiveBg;
        }
    }
    .qt-section {
        padding: 4px;
        background: darken($colorActiveBg, 4%);
    }
}

.qt-title {
    display: block;
    overflow: hidden;
    padding: 0 3em .4em 0;

    white-space: nowrap;
    text-overflow: ellipsis;
}

.qt-body {
    display: block;
    overflow: hidden;

    color: lighten($colorText, 32%);
    white-space: nowrap !important;
    text-overflow: ellipsis;
}

.qt-shortcut {
    position: absolute;
    top: $padding - 1px;
    right: $padding;
    padding: 2px 4px;
    border: 1px solid darken($colorActiveBg, 8%);
    background: darken($colorActiveBg, 4%);
    border-radius: 2px;

    font-size: .8em;
    font-family: monospace;
}

.qt-dropdown-search {
    display: block;
    width: 100%;
    height: 32px !important;
    padding: $padding;
    border: 0 !important;
    box-shadow: 0 1px 2px darken($colorActiveBg, 8%);

    font-size: 1em;
    line-height: 1em;

    &:focus {
        outline: none;
    }
}

.qt-search-highlight {
    font-weight: bold;
}

.qt-blank-state {
    display: block;

    color: lighten($colorText, 32%);
    text-align: center;
    padding: 5px;
}

.g-dropdown-toolbar {
    padding: 4px;
    .gorgias-qa-btn, button {
        appearance: none;
        background: linear-gradient(#ededed, #ededed 38%, #dedede);
        border: 1px solid rgba(0, 0, 0, 0.25);
        border-radius: 2px;
        box-shadow: 0 1px 0 rgba(0, 0, 0, 0.08), inset 0 1px 2px rgba(255, 255, 255, 0.75);
        color: #444;
        text-shadow: 0 1px 0 #F0F0F0;
        transition: all .1s ease-out;
        cursor: pointer;
    }
    .g-hide-button {
        visibility: hidden;
        float: right;
        margin-top: 4px;
        font-size: 12px;
    }
}

/* Quick Access Button for the Dialog
 */

.gorgias-qa-btn {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 2147483647; /* maximum possible - 1 for the dropdown */
    display: block;
    width: 18px;
    height: 18px;
    padding: 2px;
    opacity: 0;

    visibility: hidden;
    cursor: pointer;

    appearance: none;
    background: linear-gradient(#ededed, #ededed 38%, #dedede);
    border: 1px solid rgba(0, 0, 0, 0.25);
    border-radius: 2px;
    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.08), inset 0 1px 2px rgba(255, 255, 255, 0.75);
    color: #444;
    text-shadow: 0 1px 0 #F0F0F0;

    &:hover {
        opacity: 1 !important;
        background-image: linear-gradient(#f0f0f0, #f0f0f0 38%, #e0e0e0);
        border-color: rgba(0, 0, 0, 0.3);
        box-shadow: 0 1px 0 rgba(0, 0, 0, 0.12), inset 0 1px 2px rgba(255, 255, 255, 0.95);

        color: #000;
    }

    &:active {
        background-image: linear-gradient(#e7e7e7, #e7e7e7 38%, #d7d7d7);
        box-shadow: none;
        text-shadow: none;
    }

    &:focus {
        color: #000;
    }
}

/* white arrow used on active
 */

.gorgias-qa-btn:before {
    content: '';
    position: absolute;
    bottom: -3px;
    left: 50%;
    display: block;
    margin: 0 0 0 -5px;
    border-width: 0 5px 5px;
    border-color: transparent transparent #fff;
    border-style: solid;
    visibility: hidden;
}

.qt-dropdown-show-top .gorgias-qa-btn:before {
    bottom: auto;
    top: -3px;
    border-width: 5px 5px 0;
    border-color: #fff transparent transparent;
}

/* gorgias icon on the qa button
 */
.gorgias-qa-btn:after {
    content: '';
    position: relative;
    top: 0;
    left: 0;
    display: block;
    height: 100%;
    width: 100%;

    background: url('../../icons/icon48.png') no-repeat center center;
    background-size: contain;
}

/* show the qa button when a textarea, input or contenteditable is focused
 * when the button is clicked
 * when the dropdown is shown (after the button is clicked)
 */

.gorgias-qa-btn:active,
.qa-btn-dropdown-show .gorgias-qa-btn,
.gorgias-show-qa-btn .gorgias-qa-btn {
    visibility: visible;
    opacity: .6;
}

.gorgias-qa-btn-badge {
    display: none;

    content: "";
    position: absolute;

    top: -4px;
    right: -4px;

    width: 8px;
    height: 8px;
    background: #ee2227;

    border-radius: 4px;
}

/* qa button active styles
 */

.qa-btn-dropdown-show .gorgias-qa-btn {
    background: #efefef;
    box-shadow: none;
    opacity: 1;
}

.qa-dropdown-show .gorgias-qa-btn:before {
    visibility: visible;
}

.qa-btn-dropdown-show .g-hide-button {
    visibility: visible;
}

.gorgias-qa-tooltip {
    display: none;
    position: absolute;
    z-index: 2147483647;
    box-sizing: border-box;
    width: 185px;
    height: 24px;
    padding: 5px;
    background: #2A2A2A;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    border-radius: 2px;
    color: #fff;
    font-size: 70%;
    font-weight: bold;
}

.gorgias-qa-tooltip:after,
.gorgias-qa-tooltip-bottom:after {
    content: '';
    position: absolute;
    left: 160px;
    display: block;
    width: 0;
    z-index: 1;
    border-style: solid;
    border-color: #2A2A2A transparent;
}

.gorgias-qa-tooltip:after {
    border-width: 8px 8px 0;
    bottom: -8px;
}

.gorgias-qa-tooltip-bottom:after {
    border-width: 0 8px 8px 8px;
    top: -8px;
    bottom: auto;
}

.qa-btn-dropdown-show .gorgias-qa-tooltip {
    display: none !important;
}

.g-sidebar {
    width: 220px;
    border: 0;
}

.macro-suggestions-container {
    float: left;
    margin-bottom: 8px;

    .macro-list {
        height: 90px;
        overflow-x: hidden;
        overflow-y: scroll;
        position: relative;

        border: 1px solid #D3D3D3;
        border-top: 0;
        border-radius: 2px;
        border-top-left-radius: 0;
        border-top-right-radius: 0;
    }
    .macro-suggestion {
        background-color: #F7F7F7;
        border: 1px solid #DDD;
        border-radius: 3px;
        color: #333;
        padding: 5px 9px 6px 9px;
        margin-right: 4px;
        margin-top: 4px;
        white-space: nowrap;
        float: left;
    }

    .macro-title {
        strong {
            font-weight: 400;
            background: #fedb4b;
            color: #3d4649;
        }
    }
}

